--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "twrp_url": "git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git",
   "twrp_branch": "twrp-8.1",
-  "git_username": "qianmo-xw",
-  "git_email": "1084781330@qq.com",
+  "git_username": "voipsy",
+  "git_email": "37921907+voipsy@users.noreply.github.com",
   "use_own_dt": true,
   "dt_url": "qianmo-xw/device_tree_GlocalmeG2",
   "dt_branch": "main",
