--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   "git_email": "37921907+voipsy@users.noreply.github.com",
   "use_own_dt": true,
   "dt_url": "qianmo-xw/device_tree_GlocalmeG2",
-  "dt_branch": "main",
+  "dt_branch": "master",
   "dt_remote": "github",
   "dt_path": "device/ucloudlink/Glocalme G2",
   "device_code": "Glocalme G2",
