--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
   "twrp_url": "git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git",
-  "twrp_branch": "twrp-8.1",
+  "twrp_branch": "twrp-9.0",
   "git_username": "voipsy",
   "git_email": "37921907+voipsy@users.noreply.github.com",
   "use_own_dt": true,
   "dt_url": "qianmo-xw/device_tree_GlocalmeG2",
   "dt_branch": "master",
   "dt_remote": "github",
-  "dt_path": "device/uCloudlink/Glocalme G2",
-  "device_code": "Glocalme G2",
+  "dt_path": "device/uCloudlink/GlocalmeG2",
+  "device_code": "GlocalmeG2",
   "use_omin_head": true,
   "use_repair_manifest": false,
   "fix_product": false,
