--- a/config.json
+++ b/config.json
@@ -7,8 +7,8 @@
   "dt_url": "qianmo-xw/device_tree_GlocalmeG2",
   "dt_branch": "master",
   "dt_remote": "github",
-  "dt_path": "device/uCloudlink/Glocalme G2",
-  "device_code": "Glocalme G2",
+  "dt_path": "device/uCloudlink/GlocalmeG2",
+  "device_code": "GlocalmeG2",
   "use_omin_head": true,
   "use_repair_manifest": false,
   "fix_product": false,
