--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "twrp_url": "git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git",
   "twrp_branch": "twrp-9.0",
-  "git_username": "voipsy",
-  "git_email": "37921907+voipsy@users.noreply.github.com",
+  "git_username": "xiaowei",
+  "git_email": "1084781330@qq.com",
   "use_own_dt": true,
   "dt_url": "qianmo-xw/android_device_tree_GlocalmeG2",
   "dt_branch": "master",
