--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "twrp_url": "git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git",
-  "twrp_branch": "twrp-5.1",
+  "twrp_branch": "twrp-4.4-deprecated",
   "git_username": "xiaowei",
   "git_email": "1084781330@qq.com",
   "use_own_dt": true,
