--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "twrp_url": "git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git",
   "twrp_branch": "twrp-9.0",
-  "git_username": "xiaowei",
-  "git_email": "1084781330@qq.com",
+  "git_username": "mrrulke",
+  "git_email": "simono@v6gemini.com",
   "use_own_dt": true,
   "dt_url": "qianmo-xw/twrp_device_blackshark_penrose",
   "dt_branch": "main",
