--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "twrp_url": "git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git",
+  "twrp_url": "https://github.com/mrulke/twrp_device_blackshark_penrose.git",
   "twrp_branch": "twrp-9.0",
   "git_username": "mrrulke",
   "git_email": "simono@v6gemini.com",
