--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "twrp_url": "git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git",
   "twrp_branch": "twrp-9.0",
   "git_username": "mrulke",
-  "git_email": "simono@v6gemini.com",
+  "git_email": "simon@v6gemini.com",
   "use_own_dt": true,
   "dt_url": "mrulke/twrp_device_blackshark_penrose",
   "dt_branch": "main",
