update repo action

--- a/.github/workflows/Make.yml
+++ b/.github/workflows/Make.yml
@@ -54,6 +54,7 @@ jobs:
       
     - name: Install Repo
       run: |
+        dirmngr
         mkdir ~/bin
         export REPO=$(mktemp /tmp/repo.XXXXXXXXX)
         curl -o ${REPO} https://storage.googleapis.com/git-repo-downloads/repo
