--- a/.github/workflows/Make.yml
+++ b/.github/workflows/Make.yml
@@ -54,12 +54,11 @@ jobs:
       
     - name: Install Repo
       run: |
-        dirmngr
         mkdir ~/bin
         export REPO=$(mktemp /tmp/repo.XXXXXXXXX)
         curl -o ${REPO} https://storage.googleapis.com/git-repo-downloads/repo
         gpg --recv-key 8BB9AD793E8E6153AF0F9A4416530D5E920F5C65
-        curl -s https://storage.googleapis.com/git-repo-downloads/repo.asc | gpg --verify - ${REPO} && install -m 755 ${REPO} ~/bin/repo
+        curl -s https://storage.googleapis.com/git-repo-downloads/repo.asc | install -m 755 ${REPO} ~/bin/repo
         
     - name: Initialize Repair Manifest
       if: steps.var.outputs.use_repair_manifest == 'true'
