--- a/.github/workflows/Make.yml
+++ b/.github/workflows/Make.yml
@@ -57,8 +57,7 @@ jobs:
         mkdir ~/bin
         export REPO=$(mktemp /tmp/repo.XXXXXXXXX)
         curl -o ${REPO} https://storage.googleapis.com/git-repo-downloads/repo
-        gpg --recv-key 8BB9AD793E8E6153AF0F9A4416530D5E920F5C65
-        curl -s https://storage.googleapis.com/git-repo-downloads/repo.asc | install -m 755 ${REPO} ~/bin/repo
+        install -m 755 ${REPO} ~/bin/repo
         
     - name: Initialize Repair Manifest
       if: steps.var.outputs.use_repair_manifest == 'true'
