--- a/.github/workflows/Make.yml
+++ b/.github/workflows/Make.yml
@@ -30,7 +30,7 @@ jobs:
         sudo apt -y upgrade
         
     - name: Install required packages
-      run: sudo apt -y install git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev tree lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc unzip jq bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5-dev libsdl1.2-dev libssl-dev libwxgtk3.0-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev imagemagick libbz2-dev libssl-dev lzma ncftp bash-completion python openjdk-8-jdk qemu-user-static
+      run: sudo apt -y install git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev tree lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc unzip jq bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5-dev libsdl1.2-dev libssl-dev libwxgtk3.0-gtk3-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev imagemagick libbz2-dev libssl-dev lzma ncftp bash-completion python openjdk-8-jdk qemu-user-static
     - name: Set variables
       run: |
         echo "::set-output name=twrp_url::$(jq -r '.twrp_url' config.json)"
@@ -91,6 +91,7 @@ jobs:
         sed -i 's!dt_path!${{ steps.var.outputs.dt_path }}!g' device.xml
         sed -i 's!dt_remote!${{ steps.var.outputs.dt_remote }}!g' device.xml
         sed -i 's!dt_branch!${{ steps.var.outputs.dt_branch }}!g' device.xml
+        cat device.xml
         cp device.xml workspace/.repo/local_manifests/ 
           
     - name: Sync from manifest
